--- a/src/pages/chart/chart.html
+++ b/src/pages/chart/chart.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ChartPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,5 +8,13 @@
 
 
 <ion-content padding>
-  <div [ng2-highcharts]="chartData"></div>
+  <ion-list>
+    <button ion-item *ngFor="let menu of menus" (click)="itemTapped(menu)">
+      <ion-icon [name]="menu?.icon" item-start></ion-icon>
+      {{menu.title}}
+      <div class="item-note" item-end>
+        {{menu?.note}}
+      </div>
+    </button>
+  </ion-list>
 </ion-content>
