Added chartjs component

--- a/src/pages/chart-list/chart-list.html
+++ b/src/pages/chart-list/chart-list.html
@@ -9,4 +9,5 @@
 
 <ion-content padding>
   <highchart *ngIf="menu?.id == 0"></highchart>
+  <chartjs *ngIf="menu?.id == 1"></chartjs>
 </ion-content>
