--- a/src/pages/timeline/timeline.html
+++ b/src/pages/timeline/timeline.html
@@ -1,18 +1,23 @@
-<!--
-  Generated template for the TimelinePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>timeline</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Timeline</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-list>
+    <button ion-item *ngFor="let menu of menus" (click)="itemTapped(menu)">
+      <ion-icon [name]="menu?.icon" item-start></ion-icon>
+      {{menu.title}}
+      <div class="item-note" item-end>
+        {{menu?.note}}
+      </div>
+    </button>
+  </ion-list>
 </ion-content>
