--- a/src/pages/timeline-list/timeline-list.html
+++ b/src/pages/timeline-list/timeline-list.html
@@ -14,5 +14,25 @@
 
 
 <ion-content padding>
+  <!-- In app.component.html -->
+  <h1>
+    Hello Angular!
+  </h1>
 
+  <!-- Add the timeline -->
+  <vertical-timeline>
+
+    <!-- Add some cards to the timeline. It works with *ngFor too -->
+
+    <!-- If no value is passed for the date, the current time is used. -->
+    <vertical-timeline-card>
+      <h1>Today</h1>
+    </vertical-timeline-card>
+
+    <!-- tomorrow = new Date(2017, 9, 20, 14,34); -->
+    <vertical-timeline-card [dateValue]="tomorrow">
+      <h1>Tomorrow</h1>
+    </vertical-timeline-card>
+
+  </vertical-timeline>
 </ion-content>
